<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/pokemon_details_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@color/primary_light"
        android:textColor="@color/text_primary"
        android:text="@string/pokemon_details_dialog_title"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/pokemon_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pokemon_type_text"
            app:srcCompat="@drawable/icon_placeholder" />

        <TextView
            android:id="@+id/pokemon_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="Pikachu"
            app:layout_constraintLeft_toRightOf="@+id/pokemon_image_view"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.515" />

        <es.developer.achambi.pkmng.modules.ui.screen.TypeView
            android:id="@+id/pokemon_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name_text"
            tools:text="electric"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_name_text" />

        <TextView
            android:id="@+id/pokemon_total_base_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="4dp"
            android:paddingStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_type_text"
            tools:text="BST: 320"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_type_text" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.6"
            android:orientation="vertical"
            android:id="@+id/guideline" />

        <TextView
            android:id="@+id/pokemon_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="SPE: 50"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_spa_text" />

        <TextView
            android:id="@+id/pokemon_spa_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pokemon_speed_text"
            tools:text="SPA: 50"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_spd_text" />

        <TextView
            android:id="@+id/pokemon_spd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pokemon_spa_text"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toRightOf="@+id/pokemon_def_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="SPD: 55" />

        <TextView
            android:id="@+id/pokemon_atk_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="ATK: 55"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_hp_text" />

        <TextView
            android:id="@+id/pokemon_def_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pokemon_hp_text"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="DEF: 40" />

        <TextView
            android:id="@+id/pokemon_hp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pokemon_atk_text"
            tools:text="HP: 35"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_def_text" />

        <TextView
            android:id="@+id/pokemon_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="level 50"
            app:layout_constraintEnd_toEndOf="@+id/pokemon_image_view"
            app:layout_constraintStart_toStartOf="@+id/pokemon_image_view"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/text_gray">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/details_create_config_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/details_action_button_create_configuration"
            android:backgroundTint="@color/primary_light"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/details_choose_pokemon_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/details_action_button_choose_pokemon"
            android:backgroundTint="@color/primary_light"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>